# xserver-xorg-video-loongson

./: README  configure.ac
.github/workflows/: program-builder.yml
conf/: 20-loongson.conf  Makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  man.xml  manpage.1  manpage.sgml  rules  watch  xserver-xorg-video-loongson.cron.d  xserver-xorg-video-loongson.doc-base  xserver-xorg-video-loongson.install
debian/patches/: 0001-change_README_man.patch  series
src/: Makefile.am  dri2.c  dri3.c  driver.c  driver.h  drmmode_display.c  drmmode_display.h  drmmode_uevent.c  dumb_bo.c  fake_exa.c  fake_exa.h  loongson_buffer.c  loongson_buffer.h  loongson_cursor.c  loongson_cursor.h  loongson_debug.h  loongson_entity.c  loongson_glamor.c  loongson_glamor.h  loongson_helpers.c  loongson_helpers.h  loongson_module.c  loongson_options.c  loongson_options.h  loongson_pixmap.c  loongson_pixmap.h  loongson_probe.c  loongson_probe.h  loongson_shadow.c  loongson_shadow.h  pageflip.c  present.c  vblank.c
